@@ -32,6 +32,7 @@ Enhancements
     token (Issue #2468, PR #2707)
   * Added the `from_smiles` classmethod to the Universe (Issue #2468, PR #2707)
   * Added computation of Mean Squared Displacements (#2438, PR #2619)
+  * Added Hydrogen Bond Lifetime via existing autocorrelation features (PR #2791)
 
 Changes
   * Changes development status from Beta to Mature (Issue #2773)
